feat: card tests